--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^19.7.2",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-user-preferences": "^2.4.1"
+    "puppeteer": "^19.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
